--- a/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/src/components/tiptap-templates/simple/simple-editor.scss
@@ -138,3 +138,29 @@ body {
   border: none;
   border-top: 1px solid #ccc;
 }
+
+/* In your global or editor-specific styles */
+.taskItem input[type='checkbox'] {
+  margin-right: 0.5rem;
+  color: #000;
+}
+/* Task list styling */
+ul[data-type="taskList"] {
+  list-style: none;
+  padding: 0;
+}
+
+li[data-type="taskItem"] {
+  display: flex;
+  align-items: center;
+}
+
+li[data-type="taskItem"] > label {
+  flex: 0 0 auto;
+  margin-right: 0.5rem;
+  user-select: none;
+}
+
+li[data-type="taskItem"] > div {
+  flex: 1 1 auto;
+}
